--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV='development' ts-node-dev --respawn --transpileOnly ./app/index.ts"
+    "serve": "NODE_ENV='development' ts-node-dev --respawn --transpileOnly ./app/index.ts"
   },
   "author": "",
   "license": "ISC",
